--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -27,3 +27,29 @@ label {
 .img-fluid {
   margin: auto;
 }
+
+.doggyProfile {
+  display: flex;
+  flex-direction: row;
+  align-self: auto;
+  border-style: solid;
+  border-radius: 25px;
+  border: 2px solid #337ab7;
+  padding: 20px;
+  
+}
+
+
+#close-profile {
+  display: flex;
+  align-self: flex-start;
+  display: flex;
+  align-self: flex-start;
+  background-color: transparent;
+}
+
+.contact-shelter {
+  border-radius: 25px;
+  border: 2px solid #337ab7;
+  background-color: lightslategrey;
+}
