--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -45,6 +45,10 @@ label {
   background-color: transparent;
 }
 
+.dog-name {
+  margin-top: -30px;
+}
+
 .contact-shelter {
   border-radius: 25px;
   border: 2px solid #337ab7;
@@ -67,6 +71,6 @@ textarea {
   resize: none;
 }
 
-.btn {
+.btn-facebook {
   width: 200px;
 }
