Adds paw images to image directory

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -170,7 +170,7 @@ textarea {
 }
 
 .bullet {
-  background-image: url('./images/PawHeart.png');
+  background-image: url('./images/pawOutline2.svg') ;
   background-repeat: no-repeat;
   background-size: 20px;
   padding-left: 25px;
