--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -2,6 +2,15 @@
   margin-bottom: 30px;
 }
 
+.media-left {
+  padding-top: 13px;
+}
+
+#remove-dog {
+  color: tomato;
+}
+
+
 body {
   background-color: #6F6F6F;
 }
