--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -14,7 +14,10 @@
   color: tomato;
 }
 
-
+.dog-form-container {
+  font-size: 50px;
+  padding-left: 40px;
+}
 body {
   background-color: #6F6F6F;
 }
