--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -86,10 +86,24 @@ label {
   border-color: white;
 }
 
+.profile-description {
+  /*display: flex;*/
+  padding: 8px 8px 8px 0;
+  line-height: 1.2em;
+  letter-spacing: .02em;
+  /*max-width: 100%;*/
+  /*flex-wrap: wrap;*/
+
+}
+
 #close-profile {
   display: flex;
   align-self: flex-start;
   background-color: transparent;
+}
+
+.profile-glyphicons {
+  background-color: rgba(18, 123, 118, 0.35);
 }
 
 .dog-name {
@@ -140,11 +154,7 @@ textarea {
   text-decoration: none;
 }
 
-.profile-description {
-  padding: 8px 8px 8px 0;
-  line-height: 1.2em;
-  letter-spacing: .02em;
-}
+
 
 .options {
   list-style-position: inside;
@@ -264,6 +274,14 @@ textarea {
   list-style-type: none;
   padding: 15px;
   margin: 0;
+}
+
+.carousel-control left {
+  background-color: black;
+}
+
+.carousel-control right {
+  background-color: rgba(18, 123, 118, 0.35);
 }
 
 .bullet {
