--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -113,7 +113,7 @@ label {
 .dog-name {
   margin-top: -30px;
   font-size: 20px;
-  font-weight: normal;
+  font-weight: 500;
   padding-bottom: 10px;
 }
 
@@ -192,10 +192,11 @@ textarea {
   padding-right: 20px;
 }
 
-.dogPaw {
+.dog-logo {
   position: relative;
   float: right;
-  width: 45px;
+  width: 55px;
+  
 }
 
 .facebook-login {
