--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -55,6 +55,10 @@ label {
   max-width: 100%;
 }
 
+.img-fluid profile single-photo {
+  max-width: 100%;
+  align-self: flex-start;
+}
 .carousel {
   display: flex;
 }
