--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -55,10 +55,11 @@ label {
   max-width: 100%;
 }
 
-.img-fluid profile single-photo {
+#single-dog-photo {
   max-width: 100%;
   align-self: flex-start;
 }
+
 .carousel {
   display: flex;
 }
