(feat) Filter out gCloudAPI broad matches, display on page

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -313,4 +313,9 @@ textarea {
 #uploadedPic img {
   max-width: 400px;
   max-height: 300px;
+  margin-bottom: 20px;
+}
+
+#uploadedPic button {
+  margin-bottom: 30px;
 }
